# loom2d

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.ps1  build.sh  mkdocs.yml  pyproject.toml  release-please-config.json  run_tests.ps1  run_tests.sh  vcpkg.json
.github/workflows/: docs.yml  release-please.yml  release.yml  tests.yml
ci/: smoke_test.py
docs/: examples.md  index.md  requirements.txt
docs/getting-started/: game-loop.md  installation.md  quickstart.md
docs/guides/: animation.md  assets.md  audio.md  camera.md  input.md  physics-events.md  physics.md  responsive-scaling.md  scene-graph.md  sprites.md  text.md  tilemaps.md  ui.md
docs/reference/: api-summary.md  math.md
examples/coin_quest/: README.md  main.py  world.py
examples/flappy/: main.py
examples/hello_world/: main.py
examples/input_demo/: main.py
examples/physics_events/: main.py
examples/platformer/: main.py
examples/responsive/: main.py
examples/stress_test/: main.py
examples/text_demo/: main.py
examples/tilemap/: main.py
examples/ui_demo/: main.py
python/loom2d/: __init__.py  cli.py
src/assets/: asset_manager.cpp  asset_manager.hpp
src/audio/: audio.cpp  audio.hpp
src/bindings/: module.cpp
src/graphics/: camera.cpp  camera.hpp  color.hpp  renderer.cpp  renderer.hpp  scaling.hpp  sokol_impl.cpp  sprite_batcher.cpp  sprite_batcher.hpp  texture.cpp  texture.hpp
src/input/: input.cpp  input.hpp
src/math/: mat4.hpp  rect.hpp  vec2.hpp
src/physics/: physics.cpp  physics.hpp
src/platform/: window.cpp  window.hpp
src/scene/: animation.cpp  animation.hpp  node.cpp  node.hpp  scene.cpp  scene.hpp  sprite_node.cpp  sprite_node.hpp  tilemap.cpp  tilemap.hpp
src/text/: font.cpp  font.hpp  text_node.cpp  text_node.hpp
src/ui/: ui_canvas.cpp  ui_canvas.hpp  widget.cpp  widget.hpp  widgets.cpp  widgets.hpp
tests/: CMakeLists.txt
tests/cpp/: test_animation.cpp  test_asset_cache.cpp  test_audio.cpp  test_graphics.cpp  test_input.cpp  test_math.cpp  test_physics.cpp  test_scene.cpp  test_text.cpp  test_tilemap.cpp  test_ui.cpp
tests/python/: conftest.py  test_bindings.py  test_coin_quest.py  test_color.py  test_game.py  test_input.py  test_physics.py  test_scene.py  test_text.py  test_tilemap.py  test_ui.py  test_vec2.py
