[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.13"]
build-backend = "scikit_build_core.build"

[project]
name = "loom2d"
version = "0.1.0"
description = "Cross-platform 2D game engine — write games in Python, run everywhere"
requires-python = ">=3.9"

[project.scripts]
loom2d = "loom2d.cli:main"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["python/loom2d"]
